# triton-tvm-ffi

./: .gitignore  CMakeLists.txt  main.py  pyproject.toml
examples/add/: add.cc  add.py
examples/attention/: attention.cc  attention.py  attnbwd.cc  attnbwdpre.cc  attnfwd.cc
examples/mm/: mm.cc  mm.py
examples/softmax/: softmax.cc  softmax.py
include/triton_tvm_ffi/: grid.h  kernel.h  macro.h  meta.h
python/triton_tvm_ffi/: __init__.py  jit.py  utils.py  wrap.py
python/triton_tvm_ffi/templates/: gendef.cc.j2  grid.h
